[build-system]
requires = [
    "setuptools>=61.0",
    "torch>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "prior-depth-anything"
description = "A pytorch implementation of Prior-Depth-Anything"
authors = [
    {name = "Zehan Wang, Siyu Chen, Lihe Yang, Jialei Wang, Ziang Zhang, Hengshuang Zhao, Zhou Zhao", email = "wangzehan01@zju.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "huggingface_hub>=0.26.0",
    "einops>=0.6.0",
    "Pillow>=10.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.5.0",
    "torch_cluster @ git+https://github.com/rusty1s/pytorch_cluster.git",
    "safetensors>=0.3.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/SpatialVision/Prior-Depth-Anything"
Repository = "https://ghe.matterport.com/matterport/prior-depth-anything"

[project.scripts]
priorda = "prior_depth_anything.cli:create_and_execute"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
include = ["prior_depth_anything*"]
